# opencv

./: README.md  run.sh
doc/note/: README.md  open_workspace.sh  轮廓检测源码分析.md
doc/note/1-学习OpenCV3-学习笔记/: Chapter01-概述.md  Chapter02-OpenCV初探.md  Chapter03-了解OpenCV的数据类型.md  Chapter04-图像和大型数组类型.md  Chapter05-数组操作.md  Chapter06-绘图和注释.md  Chapter09-跨平台和Windows系统.md  Chapter10-滤波与卷积.md  Chapter11-常见的图像变换.md  Chapter12-图像分析.md  Chapter14-轮廓.md  Chapter16-关键点和描述子.md  译者序和前言.md
doc/note/2-学习OpenCV-学习笔记/: Chapter8-轮廓.md
doc/note/3-OpenCV计算机视觉编程攻略-学习笔记/: 第7章-提取直线、轮廓和区域.md
doc/note/4-OpenCV-Python官方教程-学习笔记/: 1.2 OpenCV中的Gui特性.md  1.3 核心操作.md  1.4 OpenCV中的图像处理.md
doc/note/code/Chapter06-绘图和注释/: CMakeLists.txt
doc/note/code/Chapter06-绘图和注释/src/: draw_circle.cc
doc/note/code/Chapter14-轮廓/: CMakeLists.txt
doc/note/code/Chapter14-轮廓/src/: contour.cc  example-14-1.cc
